--- a/config.yaml
+++ b/config.yaml
@@ -8,9 +8,8 @@ params:
   banner:
     buttonText: Get Started
     subtitle: |-
-      A RESPONSIVE SITE TEMPLATE DESIGNED BY HTML5 UP
-      AND RELEASED UNDER THE CREATIVE COMMONS.
-    title: Hi, my name is Forty
+      DESIGNED BY ABDULLAH REHMAN.
+    title: Welcome to my website
   blog: {}
   contact:
     address:
