--- a/config.yaml
+++ b/config.yaml
@@ -9,7 +9,7 @@ params:
     buttonText: Get Started
     subtitle: |-
       DESIGNED BY ABDULLAH REHMAN.
-    title: Welcome, my name is Abdullah
+    title: Welcome, my name is Abdullah 
   blog: {}
   contact:
     address:
@@ -81,8 +81,8 @@ params:
     enable: yes
     showcase:
       - image: pak1.jpg
-        subtitle: Ipsum Dolor Sit Amet
-        title: Aliquam
+        subtitle: A glimpse of all my adventures to date
+        title: My Travel Blog
         url: blogs/aliquam
       - image: pic02.jpg
         subtitle: Feugiat Amet Tempus
@@ -90,8 +90,8 @@ params:
         url: blogs/tempus
       - image: pic03.jpg
         subtitle: Lorem Etiam Nullam
-        title: Magna
-        url: blogs/magna
+        title: My Precourse Assignment
+        url: blogs/precourse
       - image: pic04.jpg
         subtitle: Nisl Sed Aliquam
         title: Ipsum
