--- a/config.yaml
+++ b/config.yaml
@@ -87,7 +87,7 @@ params:
       - image: pic02.jpg
         subtitle: Feugiat Amet Tempus
         title: Tempus
-        url: blogs/tempus
+        url: blogs/myartblog
       - image: pic03.jpg
         subtitle: Lorem Etiam Nullam
         title: My Precourse Assignment
