--- a/config.yaml
+++ b/config.yaml
@@ -85,8 +85,8 @@ params:
         title: My Travel Blog
         url: blogs/aliquam
       - image: pic02.jpg
-        subtitle: Feugiat Amet Tempus
-        title: Tempus
+        subtitle: The lens of my paintbrush
+        title: My Art Blog
         url: blogs/myartblog
       - image: pic03.jpg
         subtitle: Lorem Etiam Nullam
