--- a/config.yaml
+++ b/config.yaml
@@ -72,8 +72,8 @@ params:
         url: blogs
       - name: My Art Blog
         url: blogs/myartblog
-      - name: Elements
-        url: elements.html
+      - name: CV
+        url: blogs/resume
     menu: Menu
     subtitle: By HTML5 Up
     title: Forty
