--- a/config.yaml
+++ b/config.yaml
@@ -96,10 +96,10 @@ params:
         subtitle: A glimpse of all my adventures to date
         title: My Travel Blog
         url: blogs/ipsum
-      - image: pic05.jpg
-        subtitle: Ipsum Dolor Sit Amet
-        title: Consequat
-        url: blogs/ipsum
+      # - image: pic05.jpg
+      #   subtitle: Ipsum Dolor Sit Amet
+      #   title: Consequat
+      #   url: blogs/ipsum
       # # - image: pic06.jpg
       #   subtitle: Feugiat Amet Tempus
       #   title: Etiam
