--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,6 @@
 baseURL: https://abdullah-rehman-9879be.netlify.app/
 languageCode: en-us
-title: Forty
+title: Abdullah Rehman
 theme: forty
 googleAnalytics: ''
 disqusShortname: ''
