--- a/config.yaml
+++ b/config.yaml
@@ -56,8 +56,8 @@ params:
       - icon: fa-linkedin
         label: LinkedIn
         url: https://www.linkedin.com
-  image: ''
-  name: Your name
+  image: IMG_0305.jpg
+  name: Abdullah Rehman
   navigation:
     button1:
       - name: Get Started
@@ -73,7 +73,6 @@ params:
       - name: My Art Blog
         url: blogs/myartblog
       - name: CV
-        image: pic02.jpg
         url: blogs/resume
     menu: Menu
     subtitle: By HTML5 Up
