--- a/config.yaml
+++ b/config.yaml
@@ -56,8 +56,8 @@ params:
       - icon: fa-linkedin
         label: LinkedIn
         url: https://www.linkedin.com
-  image: "IMG_0305.jpg""
-  name: Abdullah Rehman
+  image: ''
+  name: Your name
   navigation:
     button1:
       - name: Get Started
