--- a/config.yaml
+++ b/config.yaml
@@ -92,7 +92,7 @@ params:
         subtitle: Lorem Etiam Nullam
         title: Data Analytics Assignment
         url: blogs/data
-      - image: pak1.jpg
+      - image: pak2.gif
         subtitle: A glimpse of all my adventures to date
         title: My Travel Blog
         url: blogs/ipsum
