--- a/config.yaml
+++ b/config.yaml
@@ -80,7 +80,7 @@ params:
   tiles:
     enable: yes
     showcase:
-      - image: AboutMe.gif
+      - image: AboutMe2.gif
         subtitle: A brief introduction about me
         title: About Me
         url: blogs/about_me
