--- a/config.yaml
+++ b/config.yaml
@@ -9,7 +9,7 @@ params:
     buttonText: Dive In
     subtitle: |-
       My name is Abdullah
-    title: Hello, Bonjour, Hola, Nǐn hǎo, Salam, Yassas 
+    title: Hello, Bonjour, Hola, Nǐn hǎo, Salam, Yassas, Tere
   blog: {}
   contact:
     address:
