--- a/config.yaml
+++ b/config.yaml
@@ -9,7 +9,7 @@ params:
     buttonText: Dive In
     subtitle: |-
       My name is Abdullah
-    title: Hello, Bonjour, Hola, Nǐn hǎo, سلام, Yassas,
+    title: Hello, سلام, Bonjour, Hola, Nǐn hǎo,  Yassas,
   blog: {}
   contact:
     address:
