--- a/config.yaml
+++ b/config.yaml
@@ -46,7 +46,7 @@ params:
         url: https://www.twitter.com
       - icon: fa-facebook
         label: Facebook
-        url: https://www.facebook.com
+        url: https://www.facebook.com/abdullah.rehman.31
       - icon: fa-instagram
         label: Instagram
         url: https://www.instagram.com/abdullahrehman__
