--- a/config.yaml
+++ b/config.yaml
@@ -43,7 +43,7 @@ params:
     social:
       - icon: fa-twitter
         label: Twitter
-        url: https://www.twitter.com
+        url: https://twitter.com/abdullah652q
       - icon: fa-facebook
         label: Facebook
         url: https://www.facebook.com/abdullah.rehman.31
