--- a/config.yaml
+++ b/config.yaml
@@ -34,7 +34,7 @@ params:
     text: Please visit [this page](/)
   favicon: favicon.ico
   footer:
-    copyright: Company Name
+    copyright: London Business School MAM2022
     enable: yes
     quicklinks:
       - alt: HTML5 UP
